--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -28,4 +28,8 @@ jobs:
           lein: 2.9.1
 
       - name: Get leiningen version
-        run: lein -v        
+        run: lein -v
+
+      - name: Run tests
+        run: lein test
+
